# PADELF-Dashboard

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/padelf_dashboard/: app.py
src/padelf_dashboard/data/: client.py  model.py  schema.py
src/padelf_dashboard/ui/: data_quality.py  datasets_detail.py  filters.py  glossary.py  results.py  statistics.py
tests/: test_dataset_detail.py  test_filters.py  test_integration_render_detail.py  test_load_metadata.py  test_search.py  verify_generated_data.py
tests/fixtures/: datasets_empty.yaml
